--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/tomcphr/emma#readme",
   "dependencies": {
+    "@mikewesthad/dungeon": "^1.2.2",
     "phaser": "^3.16.2"
   },
   "devDependencies": {
