--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/tomcphr/emma#readme",
   "dependencies": {
     "@mikewesthad/dungeon": "^1.2.2",
+    "npm": "^6.9.0",
+    "pathfinding": "^0.4.18",
     "phaser": "^3.17.0"
   },
   "devDependencies": {
