--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@mikewesthad/dungeon": "^1.2.2",
     "npm": "^6.9.0",
-    "pathfinding": "^0.4.18",
-    "phaser": "^3.17.0"
+    "phaser": "^3.17.0",
+    "phaser-navmesh": "^2.0.4"
   },
   "devDependencies": {
     "electron": "^6.0.1",
